# Orbix

./: .env  .gitignore  CMakeLists.txt  LICENSE  Network.txt  README.eng.md  README.md  README.ru.md  Ysuf2011.xml  activeUser.txt  build.bat  build.sh  catcher.py  crashTestProgramShablon  debug.txt  exit.bat  exit.py  exit.sh  githubPush  go.mod  go.sum  hw  main.cpp  main.go  main.py  main.sh  main.spec  orbix  readme.txt  request.json  restart.cpp  run_main.bat  running.txt  test.mycmd  testCommandCMD  testSh  testShablon  testShablonCrash  testWork
AdditionalCMD/: editOrbix.go
Network/: dnslookup.go  geoip.go  ipinfo.go  openLink.go  ping.go  scanport.go  whois.go
ORPXI/: ORPXI.go  ORPXI.txt  animatedPrint.go  autoComplete.go  bufer  checkSafe.go  commandsVar.go  debug.txt  displayHelp.go  executeCommand.go  executeShablon.go  handlePromptCommand.go  handleUnknownCommand.go  parseCommandLine.go  safe.go  signOut.go  startShablon.go
OS/: os.go
Orbix/: Orbix.go  animatedPrint.go  autoComplete.go  checkSafe.go  commandsVar.go  displayHelp.go  executeCommand.go  executeShablon.go  handlePromptCommand.go  handleUnknownCommand.go  parseCommandLine.go  safe.go  signOut.go  startShablon.go
Orpm/: main.c  main.go  opm.h
chan/: environment__src_get_user_nickname.go  orbix__src_prompt.go  orbix__src_restore.go  pkg_chan.go  scripts__orbix_func.go  scripts__orbix_loop_data.go  src__service_set_varFn.go  system__user.go  utils.go
cmdPress/: experimentNewCMDView.go
debug/: debugCommands.go
editCMD/: editORPXI.go  editOrbix.go
goCmd/: goCmd.go
run/: run.go
(+377 files in other folders)
